--- a/composer.json
+++ b/composer.json
@@ -30,39 +30,39 @@
         "sensio/generator-bundle": "^2.3|^3.0",
         "incenteev/composer-parameter-handler": "~2.0",
         "tedivm/stash-bundle": "~0.4",
-        "ezsystems/ezpublish-kernel": "^6.7@dev",
-        "ezsystems/repository-forms": "^1.4@dev",
-        "ezsystems/ezplatform-solr-search-engine": "^1.1@dev",
-        "ezsystems/platform-ui-bundle": "^1.6@dev",
-        "ezsystems/ez-support-tools": "~0.1.0@dev",
-        "ezsystems/ezplatform-http-cache": "^0.1@dev",
-        "ezplatform-i18n/ezplatform-i18n-ach_ug": "^1.0@dev",
-        "ezsystems/comments-bundle": "~6.0@dev",
-        "ezsystems/studio-ui-bundle": "^1.6@dev",
-        "ezsystems/ezstudio-notifications": "^1.2@dev",
-        "ezsystems/landing-page-fieldtype-bundle": "^1.6@dev",
-        "ezsystems/ezstudio-demo-bundle": "^1.6@dev",
-        "ezsystems/ezstudio-demo-bundle-data": "^1.6@dev",
-        "ezsystems/share-buttons-bundle": "~1.1@dev",
-        "ezsystems/flex-workflow": "^1.6@dev",
-        "ezsystems/ezstudio-form-builder": "^1.0@dev",
+        "ezsystems/ezpublish-kernel": "~6.8.0",
+        "ezsystems/repository-forms": "~1.6.0",
+        "ezsystems/ezplatform-solr-search-engine": "^1.1",
+        "ezsystems/platform-ui-bundle": "~1.8.0",
+        "ezsystems/ez-support-tools": "~0.1.0",
+        "ezsystems/ezplatform-http-cache": "^0.1",
+        "ezplatform-i18n/ezplatform-i18n-ach_ug": "^1.0",
+        "ezsystems/comments-bundle": "~6.0.0",
+        "ezsystems/studio-ui-bundle": "~1.8.0",
+        "ezsystems/ezstudio-notifications": "~1.2.0",
+        "ezsystems/landing-page-fieldtype-bundle": "~1.8.0",
+        "ezsystems/ezstudio-demo-bundle": "~1.8.0",
+        "ezsystems/ezstudio-demo-bundle-data": "~1.8.0",
+        "ezsystems/share-buttons-bundle": "~1.1.0",
+        "ezsystems/flex-workflow": "~1.8.0",
+        "ezsystems/ezstudio-form-builder": "~1.1.0",
         "egulias/listeners-debug-command-bundle": "~1.9",
         "white-october/pagerfanta-bundle": "1.0.*",
         "hautelook/templated-uri-bundle": "~1.0 | ~2.0",
         "doctrine/doctrine-bundle": "~1.3",
         "symfony/expression-language": "~2.4",
         "sensio/framework-extra-bundle": "~3.0",
-        "ezsystems/content-on-the-fly-prototype": "^0.1.6@dev",
+        "ezsystems/content-on-the-fly-prototype": "~0.1.7",
         "components/handlebars.js": "~3.0.0",
-        "ezsystems/recommendation-bundle": "^1.0@dev",
-        "willdurand/js-translation-bundle": "^2.7@dev",
+        "ezsystems/recommendation-bundle": "~1.2.0",
+        "willdurand/js-translation-bundle": "dev-master#7e6839be69d7d5e0758ed0b014d13e1ff1e709d1",
         "ramsey/uuid": "^3.5",
-        "ezsystems/ezstudio-cron": "^1.0@dev",
-        "ezsystems/date-based-publisher": "^1.0@dev",
-        "ezsystems/ezstudio-personalized-block": "^1.0@dev"
+        "ezsystems/ezstudio-cron": "~1.0.0",
+        "ezsystems/date-based-publisher": "~1.1.0",
+        "ezsystems/ezstudio-personalized-block": "~1.0.0"
     },
     "require-dev": {
-        "ezsystems/ezplatform-i18n": "^1.0@dev",
+        "ezsystems/ezplatform-i18n": "^1.0",
         "behat/behat": "~3.0",
         "behat/symfony2-extension": "~2.0",
         "behat/mink-extension": "*",
